welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:10: error: overloaded method value abs with alternatives:
  (x$1: Double)Double <and>
  (x$1: Float)Float <and>
  (x$1: Long)Long <and>
  (x$1: Int)Int
 cannot be applied to (Int, Int)
  return Math.abs(a, b)
              ^